# jellyfin-newsletter

./: .gitignore  README.md  pyproject.toml
examples/: movie.json  season.json  serie.json
src/jellyfin_newsletter/: html_generation.py  jellyfin_api.py  jellyfin_image_type.py  newsletter_constructor.py  random_fact.py  send_email.py  utils.py
src/jellyfin_newsletter/assets/mail_template/: body_movie.html  body_season.html  body_serie.html  header.html  template.html
